# perdition

./: .cvsignore  .gitignore  .hgignore  .hgtags  AUTHORS  CODING_LOCATIONS.in  ChangeLog  INSTALL.in  Makefile.am  README  README.in  README.perditiondb.in  TODO  acconfig.h  autogen.sh  config.h.in  configure.ac  configure.in  header  header.bash  header.c  header.null  perdition-0.0.0.lsm  perdition-0.1.0.lsm  perdition-0.1.1.lsm  perdition-0.1.10.lsm  perdition-0.1.2.lsm  perdition-0.1.3.lsm  perdition-0.1.4.lsm  perdition-0.1.5.lsm  perdition-0.1.6.lsm  perdition-0.1.7.lsm  perdition-0.1.8.lsm  perdition-0.1.9.lsm  perdition-1.11.lsm  perdition-1.12.lsm  perdition-1.13.lsm  perdition-1.14.lsm  perdition-1.15.lsm  perdition-1.17.lsm  (+1 more)
.github/workflows/: build_on_ubuntu_20_04.yml
debian/: .cvsignore  Makefile.am  changelog  control  copyright  perdition-bdb.files  perdition-bdb.prerm  perdition-dev.files  perdition-gdbm.conffiles  perdition-gdbm.files  perdition-gdbm.postinst  perdition-gdbm.prerm  perdition-ldap.conffiles  perdition-ldap.files  perdition-ldap.postinst  perdition-ldap.triggers  perdition-mysql.files  perdition-mysql.postinst  perdition-nis.files  perdition-nis.postinst  perdition-odbc.files  perdition-odbc.postinst  perdition-posix-regex.conffiles  perdition-posix-regex.files  perdition-posix-regex.postinst  perdition-postgresql.files  perdition-postgresql.postinst  perdition-postgresql.prerm  perdition.conffiles  perdition.dirs  perdition.files  perdition.postinst  perdition.postrm  perdition.preinst  perdition.prerm  perdition.shlibs  rules  shlibs.local
etc/: Makefile.am
etc/pam.d/: Makefile.am
etc/perdition/: .cvsignore  Makefile.am  Makefile.in  Makefile.popmap.in  perdition.conf  popmap
etc/perdition/ldap/: makedb  popmap.ldif
etc/perdition/mysql/: makedb  perdition.sql
etc/perdition/postgresql/: makedb
etc/rc.d/: Makefile.am
etc/rc.d/init.d/: .cvsignore  Makefile.am  Makefile.in  perdition  perdition.debian  perdition.debian.in  perdition.rh  perdition.rh.in  perdition.suse
etc/sysconfig/: Makefile.am  perdition  perdition.suse
libjain/: .cvsignore  COPYING  Makefile.am  header  jain.c  jain.h
makebdb/: .cvsignore  Makefile.am  makebdb.1  makebdb.c  options.c  options.h
makegdbm/: .cvsignore  Makefile.am  Makefile.in  makegdbm.1  makegdbm.c  options.c  options.h
packaging/: Makefile.am
packaging/lsb/: Makefile.am  perdition.spec.in
packaging/redhat/: Makefile.am
packaging/redhat/6.2/: .cvsignore  Makefile.am  perdition.spec.in
perdition/: .cvsignore  :w  Makefile.am  acap.c  acap.h  acap_token.c  acap_token.h  auth.h  base64.c  base64.h  buf.h  config_file.c  config_file.h  config_file2.c  daemon.c  daemon.h  getserver.c  getserver.h  greeting.c  greeting.h  imap4.c  imap4.h  imap4_in.c  imap4_in.h  imap4_out.c  imap4_out.h  imap4_tag.c  imap4_tag.h  imap4_write.c  imap4_write.h  imap4s.c  imap4s.h  int.h  io.c  io.h  io_select.c  io_select.h  log.h  managesieve.c  managesieve.h  (+51 more)
perdition/db/: Makefile.am  Makefile.in
perdition/db/bdb/: Makefile.am  Makefile.in  perditiondb_bdb.c  perditiondb_bdb.h
perdition/db/cdb/: Makefile.am  Makefile.in  README  perditiondb_cdb.c  perditiondb_cdb.h
perdition/db/daemon/: .cvsignore  Makefile.am  Makefile.in  client.c  packet.c  packet.h  perditiondb_daemon.c  perditiondb_daemon.h  server.c  unix_socket.c  unix_socket.h
perdition/db/daemon/lib/: Makefile.am  Makefile.in  packet.c  packet.h  unix_socket.c  unix_socket.h
perdition/db/gdbm/: .cvsignore  Makefile.am  Makefile.in  Makefile.popmap.in  perditiondb_gdbm.c  perditiondb_gdbm.h
perdition/db/ldap/: Makefile.am  Makefile.in  perdition.schema  perditiondb_ldap.c  perditiondb_ldap.h  perditiondb_ldap_makedb  perditiondb_ldap_makedb.8
perdition/db/ldap/doc/: .cvsignore  Makefile.am  ds5dump.eps  mail-ldapdump.eps  perdition_ldap.lyx  perdition_ldap.tex
perdition/db/mysql/: Makefile.am  Makefile.in  perditiondb_mysql.c  perditiondb_mysql.h  perditiondb_mysql_makedb  perditiondb_mysql_makedb.1  perditiondb_mysql_makedb.8
perdition/db/nis/: Makefile.am  Makefile.in  README  README.perditiondb_nis  perditiondb_nis.c  perditiondb_nis.h
perdition/db/odbc/: Makefile.am  Makefile.in  perditiondb_mysql_odbc  perditiondb_odbc.c  perditiondb_odbc.h  perditiondb_odbc_makedb  perditiondb_odbc_makedb.8
perdition/db/posix_regex/: Makefile.am  Makefile.in  perditiondb_posix_regex.c  perditiondb_posix_regex.h  popmap.re
perdition/db/postgresql/: Makefile.am  Makefile.in  perditiondb_postgresql.c  perditiondb_postgresql.h  perditiondb_postgresql_makedb  perditiondb_postgresql_makedb.8
test/: add_tymm  del_tymm  input.imap4  input.pop3  test.pl  test_libraries  test_tymm
